# randomizer-rs

./: .env  Cargo.toml  README.md  build.rs  docker-compose.yml  generate-entities.bat  generate-entities.sh  log4rs.yml  rustfmt.toml  sonar-project.properties
.cargo/: config.toml
entity/: Cargo.toml
entity/src/: lib.rs  prelude.rs  quote.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
proto/randomizer/v1/: random_common.proto  random_number.proto  random_quote.proto  random_string.proto
resource/text/: jongensvoornamen.txt  loremipsum.txt  loremipsumNL.txt  meisjesvoornamen.txt
src/: main.rs
src/api/: mod.rs
src/api/data/: common.rs  mod.rs  number.rs  quote.rs  string.rs
src/api/route/: common_randomizer.rs  mod.rs  number_randomizer.rs  string_randomizer.rs
src/api/v1/service/: common_randomizer.rs  mod.rs  number_randomizer.rs  quote_randomizer.rs  string_randomizer.rs
src/classes/: location.rs  season.rs
src/classes/v1/: mod.rs
src/utils/: database.rs  date.rs
src/utils/v1/: custom_macro.rs  database.rs  mod.rs
