[package]
name = "randomizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "migration", "entity"]

[dependencies]
migration = {path="migration"}
entity = {path="entity"} 
actix-web = "4"
actix-web-validator = "5.0.1"
validator = { version = "0.16", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0.162", features = ["derive"] }
chrono = { version = "0.4.24", features = ["serde"] }
async-std = { version = "^1", features = ["attributes", "tokio1"] }
log4rs = { version = "1.2.0", features = ["gzip"] }
log = "0.4.17"
dotenvy = "0.15.7"




# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
