[package]
name = "randomizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "migration", "entity"]

[dependencies]
migration = {path="migration"}
entity = {path="entity"} 
validator = { version = "0.16", features = ["derive"] }
rand = "0.8.5"
chrono = { version = "0.4.24", features = ["serde"] }
async-std = { version = "^1", features = ["attributes", "tokio1"] }
log4rs = { version = "1.2.0", features = ["gzip"] }
log = "0.4.17"
dotenvy = "0.15.7"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.4" }
tonic = { version = "0.9.2", features = ["gzip"] }
tonic-reflection = "0.9.2"
tonic-async-interceptor = "0.1.0"
tonic-web = "0.9.2"
prost = "0.11.9"
prost-types = "0.11.9"

[build-dependencies]
tonic-build = "0.9"
walkdir = "2.3.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
